# job_search_orchestrator

./: .env.example  .gitignore  AGENTS.md  README.md  job_scarp_sample.txt  main.py  mcp_server.py  migration_merge_tables.sql  migration_normalize_job_status.sql  pyproject.toml  requirements.txt  server.py
.github/workflows/: ci.yml
assets/: SKILL.md  example_calls.md  resume.yaml
assets/openclaw-skill/: SKILL.md
assets/openclaw-skill/references/: API_Integration.md
db/migrations/: 2026-04-18_add_job_type_work_mode_to_jobs_final.sql  2026-04-18_add_unique_constraint_shared_links_url.sql
docs/: ARCHITECTURE.md  INTEGRATION.md  SUPABASE_SCHEMA.md
docs/jobhunt-orchestrator-api/: LICENSE.txt  SKILL.md
docs/jobhunt-orchestrator-api/references/: INTEGRATION.md
plan/: architecture-merge-boundaries-1.md  feature-personal-daily-scrape-1.md
src/api/: app.py  models.py  security.py
src/api/routes/: enricher.py  pipeline.py  system.py  tables.py
src/common/: cli.py  client.py  config.py  constants.py  validators.py
src/job_enricher/: cli.py  client_copilot.py  config.py  constants.py  extractors.py
src/jobspy_mcp_server/: __main__.py  cli.py  guardrails.py  json_output.py  markdown_output.py  preferences.py  server.py
src/jobspy_mcp_server/jobspy_scrapers/: __init__.py  exception.py  model.py  util.py
src/mcp_interface/: serialization.py  server.py
src/mcp_server/: __init__.py  server.py
src/pipeline/: cli.py  models.py
src/repository/: supabase.py
src/scraping/: __init__.py  cli.py  defaults.py  guardrails.py  models.py  output.py  ports.py  preferences.py  renderers.py  requests.py  service.py  validators.py
src/scraping/adapters/: jobspy_adapter.py  jobspy_models.py  jobspy_output.py  jobspy_preferences.py
src/service/: enricher.py  enricher_persistence.py  pipeline.py  queries.py  submit.py  tables.py
src/service/mappers/: scrape_to_jobs_final.py
src/service/stages/: __init__.py  enrich.py  ingest.py
tests/: test_adapter_boundary.py  test_api_server.py  test_enricher_persistence.py  test_ingest_stage.py  test_job_enricher_cli.py  test_job_enricher_extractors.py  test_job_enricher_operations.py  test_operations.py  test_pipeline_api.py  test_pipeline_operations.py  test_scrape_to_jobs_final_mapper.py  test_scraping_cli.py  test_scraping_defaults.py  test_scraping_mcp_interface.py  test_scraping_service.py  test_scraping_validators.py  test_validators.py
(+28 files in other folders)
