[project]
name = "automated-job-hunt-orchestrator"
version = "0.1.0"
description = "CLI and API orchestrator for Supabase table operations and job enrichment workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.0,<3.0.0",
    "pydantic>=2.7.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "typer>=0.12.3,<1.0.0",
    "rich>=13.7.0,<14.0.0",
    "github-copilot-sdk",
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn>=0.35.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "httpx>=0.28.0,<1.0.0",
]

[tool.pytest.ini_options]
pythonpath = [
    "src",
]
