[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "automated-job-hunt-orchestrator"
version = "0.1.0"
description = "CLI and API orchestrator for Supabase table operations and job enrichment workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.2",
    "fastmcp>=0.2.0",
    "requests>=2.32.0,<3.0.0",
    "pydantic>=2.7.0,<3.0.0",
    "PyYAML>=6.0.1",
    "python-dotenv>=1.0.0,<2.0.0",
    "typer>=0.12.3,<1.0.0",
    "rich>=13.7.0,<14.0.0",
    "github-copilot-sdk",
    "fastapi>=0.115.0,<1.0.0",
    "markdownify>=1.1.0",
    "mcp>=1.1.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "regex>=2024.4.28",
    "tls-client>=1.0.1",
    "uvicorn>=0.35.0,<1.0.0",
]

[project.scripts]
jobspy-mcp-server = "jobspy_mcp_server:main"
jobspy-search = "jobspy_mcp_server.cli:main"

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "pyright>=1.1.0",
    "pytest>=8.0.0,<9.0.0",
    "ruff>=0.4.0",
    "httpx>=0.28.0,<1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/api",
    "src/common",
    "src/job_enricher",
    "src/jobspy_mcp_server",
    "src/mcp_interface",
    "src/mcp_server",
    "src/pipeline",
    "src/repository",
    "src/scraping",
    "src/service",
]

[tool.pytest.ini_options]
pythonpath = [
    "src",
]
testpaths = [
    "tests",
]
markers = [
    "integration: marks tests requiring network and live site access (deselect with -m 'not integration')",
    "slow: marks long running tests (deselect with -m 'not slow')",
    "unit: marks fast, self-contained unit tests",
    "smoke: marks entrypoint smoke tests",
]
